--- a/views/verified.ejs
+++ b/views/verified.ejs
@@ -18,8 +18,8 @@
                     <div class="card bg-dark text-white" style="border-radius: 1rem;">
                         <div class="card-body p-5 text-center">
                             <div class="mb-md-5 mt-md-4 pb-5">
-                                <h2 class="fw-bold mb-2">Certificate Verified ✔️</h2>
-                                <p class="text-white-50 mb-5">Here are the details of the certificate</p>
+                                <h2 class="fw-bold mb-2">📜 Certificate Verified 📜</h2>
+                                <p class="text-white-50 mb-5">Here are the details of the certificate:</p>
                                 <div class="card text-bg-primary mb-3">
                                     <div class="card-header">EduChain Certificate</div>
                                     <div class="card-body">
@@ -30,7 +30,7 @@
                                         <h5 class="card-title">Message</h5>
                                         <p class="card-text"><%= certificateDetails.message %></p>
                                     </div>
-                                    <div class="card-footer">Certificate deployed on the Ethereum TestNet</div>
+                                    <div class="card-footer">Certificate retrieved from the Ethereum testnet</div>
                                 </div>
                                 <a href="/home" class="btn btn-outline-light btn-lg px-5 mt-4">Done</a>
                             </div>
